Prevent speakerdeck slides leaking out of container

--- a/web/themes/custom/opdavies/src/custom-base.pcss
+++ b/web/themes/custom/opdavies/src/custom-base.pcss
@@ -25,3 +25,7 @@ a {
 blockquote {
   @apply pl-5 border-l-4 border-gray-300 italic
 }
+
+iframe {
+  @apply max-w-full
+}
